# apps/be/internal/menu/dto/update_menu_order.dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type UpdateMenuOrderRequestDTO struct {
+	ID    uint   `json:"id"`
+	Order string `json:"order"`
+}
